# OptivAI_training

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
.github/workflows/: pull_request.yml
src/: create_training_dataset.py  data_preprocessing.py  main.py  test_model.py
src/read_data/: read_agent_actions.py  read_agent_rewards.py  read_blueprint.py  read_eplussz.py  read_epw.py  read_observations.py  read_simulated_actions.py  read_zones_data.py
src/read_models/: language_model.py  vision_OCR_model.py
src/read_parse_data/: parse_relevant_bulding_details.py  read_agent_actions.py  read_agent_rewards.py  read_blueprint.py  read_blueprint_extracted_data.py  read_eplussz.py  read_epluszsz.py  read_epw.py  read_observations.py  read_simulated_actions.py  read_zones_data.py
src/read_parse_data/sample_data/: README_queries.md
tests/: test_read_agent_actions.py  test_read_agent_rewards.py  test_read_epluszsz.py  test_read_epw.py  test_read_observations.py
