[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optivai_training"
version = "0.1.0"
description = "HVAC optimization using reinforcement learning"
readme = "README.md"
requires-python = ">=3.10,<4.0"  # Changed from >=3.9 to >=3.10,<4.0
license = "MIT"
# ...rest of the file
authors = [
    {name = "OptivAI Team"}
]
dependencies = [
    "accelerate==1.4.0",
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.13",
    "anyio==4.8.0",
    "bitsandbytes==0.42.0",
    "datasets==3.3.2",
    "filelock==3.17.0",
    "fsspec==2024.12.0",
    "huggingface-hub==0.29.1",
    "langchain==0.3.20",
    "langchain-core==0.3.43",
    "langgraph==0.3.5",
    "llama_models==0.1.5",
    "llama_stack==0.1.5.1",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "peft==0.14.0",
    "pillow==11.1.0",
    "pydantic==2.10.6",
    "pytest==8.3.5",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "tiktoken==0.9.0",
    "tokenizers==0.21.0",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "transformers==4.49.0",
    "typing_extensions==4.12.2",
    "wandb==0.19.7",
]

[project.optional-dependencies]
dev = [
    "autopep8==2.3.2",
    "black>=23.3.0",
    "coverage==7.6.12",
    "isort==6.0.1",
    "mypy>=1.3.0",
    "pytest-cov==6.0.0",
    "pre-commit>=3.3.2",
]

[tool.setuptools]
packages=["src"]
package-dir = {"src" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.black]
line-length = 125
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 125
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false

[[tool.mypy.overrides]]
module = ["transformers.*", "torch.*", "pandas.*", "numpy.*", "tqdm.*", "wandb.*", "PIL.*", "datasets.*", "langchain.*", "huggingface_hub.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]